changeLog for series4 MonkeyLogic template codes - VisionLab, IISc
maintained by - Georgin/Thomas

-----------------------------------------

21-02-2021 VERSION 5.1 - thomas/georgin
	templateSD/Fix/Search
	- templateSearch update to 3*3 array
	- all timing files updated to send TrialRecord to fillDashboard
	- Comments updated in all timings files
	- fillDashboard cleaned and updated to take TrialRecord as second input (instead of TrialRecord.User)
	- update cfg for and ml in each template to default monkeylogic_cfg2.mat (saved with all hardware settings as being used)
	- update latest iscan cfg (didi updated) and all renamed to 'monkeynameDate'.	

	mlLib
	- ml_makeConditionsSearch - now 3*3 array, 1 target and 8 distractors from td pairs.
	- ml_initExp - updated monkey names to include chacha and cocochacha in error message

11-02-2021 VERSION 5.0 - thomas/georgin
	templateSD/Fix/Search
	- templateSearch code added for present absent visual search (using templateSD as base)
	- test period is essentiall the search period and consequently there is no sample period
	- calTiming.m has an additional editable ('taskStimRadius') over the regular calTiming.m

	mlLib
	- ml_makeConditionsSearch - 1 target and 3 distractors from td pairs. hold and resp buttons pink and x-pos is 25 dva (was 20dva in templateSD)
	- ml_initExp - updated monkey names to include chacha and cocochacha in error message

-----------------------------------------

05-01-2021 VERSION 4.3 - thomas/georgin
	templateSD/Fix
	- calTiming.m/fixTiming.m - rectified further error in inability to deal with error on fixation after last stim
	- correct outcome is assigned if outcome value hasn't be assigned as greater than -1 by the end of while loop
	- NaN values initiated to max required size
	- event names for stimuli in fixTiming updated to match with ml_loadEvents	
	- expSetup.m for templateFixation updated to assign blocks

	mlLib